--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Violet 预告片网站</title>
+  <link href='https://cdn.jsdelivr.net/npm/dplayer@1.17.2/dist//DPlayer.min.css' rel='stylesheet' />
+  <script src='https://cdn.jsdelivr.net/npm/dplayer@1.17.2/dist/DPlayer.min.js'></script>
 </head>
 <body>
   <div id="app"></div>
-  <script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
